# personal-space-be

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: alembic-head-check.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0f6e4a1c2b9d_add_certifications.py  1f0e9d8c7b6a_add_deny_policies_for_supabase_rls.py  3e7f2a1b4c8d_add_upwork_projects.py  4b8f1d2c9a7e_add_description_to_work_experiences.py  6ad2dc0d9c37_add_project_lifecycle_fields.py  7b9a3d2e4f61_enable_rls_for_public_tables.py  7f3d2bb3c0f1_add_profile_public_slug.py  8c1d7f4b2e6a_merge_work_experience_description_and_certifications.py  91cfcf96f468_add_indexes_for_work_experience_project_.py  94fca1a390c3_initial.py  a3d006efa72e_migrate_projects_from_companies_to_work_.py  b8a6b6d70d11_rename_profile_public_flag.py  c6f4d7b8a2d1_refactor_portfolio_views_to_visitors.py  c73c0a6b9f5f_add_project_image_url.py  d1b8e4c9f2a1_add_project_urls_and_portfolio_views.py  e3b1c4a9f8d2_add_project_testimonials.py  e5a1c3d9b742_add_notes_table.py  f2c9a7d4e1b3_add_personal_projects.py
app/: config.py  database.py  dependencies.py  main.py  migration_security.py
app/auth/: __init__.py  firebase.py  middleware.py
app/enums/: __init__.py  enums.py
app/models/: __init__.py  company.py  note.py  (+7 more)
scripts/: check_alembic_heads.sh  start.sh
tests/: conftest.py  test_account.py  test_auth.py  test_dashboard.py  test_health.py  test_notes.py  test_profile.py  test_projects.py  test_public.py  test_resume.py  test_uploads.py  test_vault.py
(+47 files in other folders)
